--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -70,8 +70,11 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
 
-        <label for="confirm_password">Confirm Password:</label>
+        <label for="confirm_password">Re-enter Password:</label>
         <input type="password" id="confirm_password" name="confirm_password" required>
+
+        <label for="security_question">What's your budget?</label>
+        <input type="text" id="security_question" name="security_question" required>
 
         <button type="submit">Register</button>
     </form>
