--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -29,10 +29,12 @@
         <div class="sideBarText">Transactions</div>
       </div>
       
-      <div class="navDiv">
-        <img src="{% static 'img/report.png' %}" style="height: 20px; margin-right: 20px;" />
-        <div class="sideBarText">Reports</div>
-      </div>
+      <a href="{% url 'budget_summary' %}">
+        <div class="navDiv">
+          <img src="{% static 'img/report.png' %}" style="height: 20px; margin-right: 20px;" />
+          <div class="sideBarText">Reports</div>
+        </div>
+      </a>
 
       <div class="navDiv">
         <img src="{% static 'img/settings.png' %}" style="height: 20px; margin-right: 20px;" />
