--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -2,6 +2,13 @@
 <html>
 {% load static %}
 <head>
+  <title>MoneyParce Overview</title>
+  <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Irish+Grover&family=Passion+One:wght@400;700;900&display=swap"
+      rel="stylesheet" />
+  <link rel="stylesheet" 
+        type="text/css" 
+        href="{% static 'css/style.css' %}" />
 </head>
 
 <body>
@@ -22,12 +29,10 @@
         <div class="sideBarText">Transactions</div>
       </div>
       
-      <a href="{% url 'budget_summary' %}">
-        <div class="navDiv">
-          <img src="{% static 'img/report.png' %}" style="height: 20px; margin-right: 20px;" />
-          <div class="sideBarText">Reports</div>
-        </div>
-      </a>
+      <div class="navDiv">
+        <img src="{% static 'img/report.png' %}" style="height: 20px; margin-right: 20px;" />
+        <div class="sideBarText">Reports</div>
+      </div>
 
       <div class="navDiv">
         <img src="{% static 'img/settings.png' %}" style="height: 20px; margin-right: 20px;" />
@@ -89,8 +94,10 @@
       </div>
       <button type="button" class="add-budget-btn" onclick="toggleBudgetForm()">Add Budget</button>
     </div>
+
         
-         
+        
+        
 
         <form method="POST">
           {% csrf_token %}
@@ -113,7 +120,7 @@
         </form>
       </div>
     </div>
-    
+
   <script>
     function toggleBudgetForm() {
       var form = document.getElementById('new-budget-form');
