change the html ids system and view

--- a/transactions/templates/transactions/history.html
+++ b/transactions/templates/transactions/history.html
@@ -88,7 +88,7 @@
               <tbody>
                 {% for transaction in transactions %}
                   <tr>
-                    <td class="date-column">4/{{ forloop.counter|add:10 }}</td>
+                    <td class="date-column">{{ forloop.counter}}</td>
                     <td class="desc-column">
                       {% if transaction.type == 'Income' %}
                         Income Payment
