--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -16,6 +16,7 @@ body {
   color: white;
 
   width: 225px;
+  height:auto;
 }
 
 .sideBarHeader{
@@ -128,15 +129,20 @@ body {
   font-size: 40px;
 }
 
+.whiteBoxWrapper{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
 
-/* White Container Box */
 .whiteBox {
   background-color: white;
   color: #1E1E24;
   border-radius: 30px;
 
   width: 463px;
-  height: 260px;
+  height: 426px;
 
   display:flex;
   flex-direction: column;
@@ -152,7 +158,7 @@ body {
 }
 
 .budgetList {
-  height: 180px;
+  height: 270px;
   width: 370px;
   margin-right: 50px;
 }
@@ -170,15 +176,36 @@ body {
 /* Hidden form for adding a budget */
 #new-budget-form {
   display: none;
-  width: 463px;
 }
 
-.newBudgetInput {
+.formFormat {
+  width: 350px;
+
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-bottom: 20px;
+}
+
+.newbudgetInput {
   font-size: 14px;
-  width: 463px;
+  width: 100px;
+  border: none;
+  border-bottom: 1px solid #1E1E24;
 }
 
-.add-budget-btn {
+.newbudgetBtn{
+  width: 100px;
+  height: 20px;
+  border:none;
+  background-color: grey;
+  color: white;
+  border-radius: 30px;
+}
+
+.addBtn {
   width: 173px;
   height: 36px;
 
@@ -221,4 +248,52 @@ margin-top: 30px;
     margin-bottom: 1rem;
     border: 1px solid #ccc;
     border-radius: 6px;
-  }
+}
+
+.incomeBox{
+  background-color: white;
+  width: 463px;
+  height: 177px;
+  border-radius: 30px;
+
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin-bottom: 20px;
+}
+
+.inputBox{
+  width: 340px;
+  height: 35px;
+
+  font-size:14px;
+
+  border-radius: 30px;
+
+  margin-top: 15px;
+  margin-bottom: 15px;
+
+  padding-left: 20px;
+
+  border: 1px solid #1E1E24;
+}
+
+.expenseBox{
+  width: 463px;
+  height: 229px;
+  border-radius:30px;
+  background-color: white;
+
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.selectBox{
+  width: 360px;
+  height: 35px;
+  border-radius: 30px;
+
+  border: 1px solid #1E1E24;
+}
