--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -74,6 +74,7 @@
       </div>
     </div>
 
+    <div class="whiteBoxWrapper">
     <div class="whiteBox">
       <div class="whiteBoxTitle">Budgets</div>
       <ul class="budgetList">
@@ -83,45 +84,43 @@
           <div>{{ budget.expenses_total|floatformat:2 }} / {{ budget.total_budget }}</div>
         </div>
         {% empty %}
-          <div class="totalText">No budgets created yet.</div>
+          <div class="totalTitle">* No budgets yet.</div>
         {% endfor %}
       </ul>
       <div id="new-budget-form">
         <form method="POST">
           {% csrf_token %}
-          <input class="newbudgetInput" type="text" name="budget_name" placeholder="Budget Name (Category)">
-          <input class="newbudgetInput" type="text" name="total_budget_new" placeholder="Budget Amount">
-          <button type="submit" name="submit_budget">Save Budget</button>
+          <div class="formFormat">
+            <input class="newbudgetInput" type="text" name="budget_name" placeholder="Category">
+            <input class="newbudgetInput" type="text" name="total_budget_new" placeholder="Amount">
+            <button class="newbudgetBtn" type="submit" name="submit_budget">Save Budget</button>
+          </div>
         </form>
       </div>
-      <button type="button" class="add-budget-btn" onclick="toggleBudgetForm()">Add Budget</button>
+      <button type="button" class="addBtn" onclick="toggleBudgetForm()">Add Budget</button>
     </div>
 
+    <form method="POST">
+      {% csrf_token %}
+        <div class="incomeBox">
+          <div class="whiteBoxTitle">Income</div>
+          <input class="inputBox" type="text" name="income_amount" placeholder="Income Amount">
+          <button class="addBtn" type="submit" name="submit_income">Add Income</button>
+        </div>
         
-        
-        
-
-        <form method="POST">
-          {% csrf_token %}
-          <fieldset>
-            <legend>Income</legend>
-            <input type="text" name="income_amount" placeholder="Income Amount">
-            <button type="submit" name="submit_income">+ Add Income</button>
-          </fieldset>
-          <fieldset>
-            <legend>Expense</legend>
-            <input type="text" name="expense_amount" placeholder="Expense Amount">
-            <select name="expense_budget">
-              <option value="">Select Category</option>
-              {% for budget in budgets %}
-                <option value="{{ budget.id }}">{{ budget.name }}</option>
-              {% endfor %}
-            </select>
-            <button type="submit" name="submit_expense">+ Add Expense</button>
-          </fieldset>
-        </form>
-      </div>
-    </div>
+        <div class="expenseBox">
+          <div class="whiteBoxTitle">Expense</div>
+          <input class="inputBox" type="text" name="expense_amount" placeholder="Expense Amount">
+          <select class="selectBox" name="expense_budget">
+            <option value="">Select Category</option>
+            {% for budget in budgets %}
+            <option value="{{ budget.id }}">{{ budget.name }}</option>
+            {% endfor %}
+          </select>
+          <button class="addBtn" type="submit" name="submit_expense">Add Expense</button>
+        </div>
+    </form>
+  </div>
 
   <script>
     function toggleBudgetForm() {
