--- a/home/templates/home/forgot_password.html
+++ b/home/templates/home/forgot_password.html
@@ -3,23 +3,26 @@
 <head>
     <title>Forgot Password</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'home/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/registered.css' %}">
 </head>
 <body>
-    <div class="mainWrapper">
-        <div class="loginWrapper">
-            <div class="loginTitle">Forgot Password</div>
-            <form class="inputWrapper" method="POST" action="">
-                {% csrf_token %}
-                <input type="text" class="loginInput" id="username" name="username" placeholder="Enter your username" required>
-                <input type="number" class="loginInput" id="budget" name="budget" placeholder="What's your budget? (Security Question)" required>
-                <input type="password" class="loginInput" id="password" name="password" placeholder="Enter your new password" required>
-                <input type="password" class="loginInput" id="password2" name="password2" placeholder="Re-enter your new password" required>
-                <button class="loginBtn" type="submit">Reset Password</button>
-            </form>
-            {% if error %}
-                <div class="error">{{ error }}</div>
-            {% endif %}
+    <div class="register-wrapper">
+        <div class="card">
+            <div class="card-body">
+                <h2>Forgot Password</h2>
+                <hr />
+                <form method="POST">
+                    {% csrf_token %}
+                    <input type="text" id="username" name="username" placeholder="Enter your username" required>
+                    <input type="number" id="budget" name="budget" placeholder="What's your budget? (Security Question)" required>
+                    <input type="password" id="password" name="password" placeholder="Enter your new password" required>
+                    <input type="password" id="password2" name="password2" placeholder="Re-enter your new password" required>
+                    <button type="submit" class="btn">Reset Password</button>
+                </form>
+                {% if error %}
+                    <div class="error">{{ error }}</div>
+                {% endif %}
+            </div>
         </div>
     </div>
 </body>
