--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -4,6 +4,18 @@
 <div class="header">
   <div class="pageTitle">Overview</div>
 </div>
+
+{% if messages %}
+<div class="messages">
+    {% for message in messages %}
+    <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+        {{ message }}
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
+
+<div class="innerWrapper">
 <div class="innerWrapper">
     <div class="totalContainer">
       <div class="totalRed">
