--- a/dashboard/templates/settings/settings.html
+++ b/dashboard/templates/settings/settings.html
@@ -8,8 +8,10 @@
 <div class="innerWrapper">
   <!-- Plaid Link Button -->
   <div class="whiteBox">
-    <div class="whiteBoxTitle">BankSync</div>
+    <div class="whiteBoxTitle"></div>
+    <div class="whiteBoxTitle"></div>
     <button id="link-button" class="addBtn">Link a Bank Account</button>
+    <button onclick="window.location.href='{% url 'logout' %}';" class="addBtn">Logout</button>
   </div>
 
   <!-- Plaid Link Script -->
