--- a/transactions/templates/transactions/history.html
+++ b/transactions/templates/transactions/history.html
@@ -26,7 +26,7 @@
           <div class="sideBarText">Overview</div>
         </a>
 
-        <a href="{% url 'transactions_history' %}" class="nav-item active">
+        <a href="{% url 'transactions_history' %}" class="nav-item">
           <img src="{% static 'img/tran.png' %}" style="height: 20px; margin-right: 20px;" />
           <div class="sideBarText">Transactions</div>
         </a>
@@ -36,7 +36,7 @@
           <div class="sideBarText">Reports</div>
         </a>
 
-        <a href="#" class="nav-item">
+        <a href="{% url 'settings' %}" class="nav-item">
             <img src="{% static 'img/settings.png' %}" style="height: 20px; margin-right: 20px;" />
             <div class="sideBarText">Settings</div>
         </a>
